add missing script import for rangewidget

--- a/src/zc/dojoform/test_action_onclick.html
+++ b/src/zc/dojoform/test_action_onclick.html
@@ -16,6 +16,11 @@
        ></script>
 
     <script
+       tal:attributes="src context/++resource++zc.dojoform/rangewidget.js"
+       type="text/javascript">
+    </script>
+
+    <script
        tal:attributes="src context/++resource++zc.dojoform/zc.dojo.js"
        type="text/javascript">
     </script>
