Change build_form left_fields handling to work with the left_fields format that zc.ajaxform uses.

--- a/src/zc/dojoform/test_action_onclick.html
+++ b/src/zc/dojoform/test_action_onclick.html
@@ -35,6 +35,7 @@ zc.dojo.build_form({definition: {
       count += 1;
       dojo.attr(dojo.byId('result'), 'innerHTML', 'submitted'+count);
   }}],
+  left_fields: {name: false},
   widgets: [{id: 'name', name: 'name', fieldLabel: 'Name',
              widget_constructor: 'zope.schema.TextLine'}]
   }}, dojo.byId('formdiv')).startup();
