--- a/src/zc/dojoform/test-examples/6.html
+++ b/src/zc/dojoform/test-examples/6.html
@@ -4,8 +4,8 @@
      design='heading'
      gutters='false'
      livesplitters='true'
-     style='height: 100%; width: 100%;'
-     >
+     style='/height: 100%; width: 100%;/'
+     xxx>
     <DIV
        dojotype='dijit.layout.ContentPane'
        id='zc.dojo.zc-right-fields.ExampleForm'
@@ -21,7 +21,6 @@
         </LABEL>
         <DIV class='dijit zc-widget' id='widget_ExampleForm.favorite_color' xxx>
             <INPUT
-                readonly=''
                 id='ExampleForm.favorite_color'
                 tabIndex='0'
                 aria-required='false'
@@ -41,7 +40,6 @@
           <INPUT
               type='checkbox'
               checked=''
-              readonly=''
               id='ExampleForm.happy'
               tabIndex='0'
               />
@@ -58,7 +56,6 @@
         <DIV class='dijit zc-widget' id='widget_ExampleForm.pet' xxx>
             <INPUT
                 type='text'
-                readonly=''
                 id='ExampleForm.pet'
                 tabIndex='0'
                 aria-required='false'
@@ -77,7 +74,6 @@
         <DIV class='dijit zc-widget' id='widget_ExampleForm.temperment' xxx>
             <INPUT
                 type='text'
-                readonly=''
                 id='ExampleForm.temperment'
                 tabIndex='0'
                 value='Right Neighborly'
@@ -95,7 +91,6 @@
         <DIV class='dijit zc-widget' id='widget_ExampleForm.weight' xxx>
             <INPUT
                 type='text'
-                readonly=''
                 id='ExampleForm.weight'
                 tabIndex='0'
                 value=''
@@ -111,7 +106,6 @@
           Description
         </LABEL>
         <TEXTAREA
-            readonly=''
             id='ExampleForm.description'
             tabIndex='0'
             value='10ft tall
@@ -142,8 +136,6 @@ Razor sharp scales.'
         <DIV class='dijit zc-widget' id='widget_ExampleForm.siblings' xxx>
             <INPUT
                 type='text'
-                readonly=''
-                aria-readonly='false'
                 id='ExampleForm.siblings'
                 tabIndex='0'
                 value='1'
@@ -192,7 +184,7 @@ Razor sharp scales.'
        id='zc.dojo.zc-left-fields.ExampleForm'
        region='left'
        splitter='true'
-       style='width: 60%'
+       style='/width: 60%/'
        class='dijitContentPane'
        >
       <DIV
@@ -205,7 +197,6 @@ Razor sharp scales.'
         </LABEL>
         <DIV class='dijit zc-widget' id='widget_ExampleForm.first_name' xxx>
                 <INPUT
-                   readonly=''
                    id='ExampleForm.first_name'
                    tabIndex='0'
                    aria-required='true'
@@ -223,7 +214,6 @@ Razor sharp scales.'
         </LABEL>
         <DIV class='dijit zc-widget' id='widget_ExampleForm.last_name' xxx>
             <INPUT
-               readonly=''
                id='ExampleForm.last_name'
                tabIndex='0'
                aria-required='true'
@@ -241,7 +231,6 @@ Razor sharp scales.'
         </LABEL>
         <DIV class='dijit zc-widget' id='widget_ExampleForm.age' xxx>
             <INPUT
-                readonly=''
                 id='ExampleForm.age'
                 tabIndex='0'
                 value='23'
@@ -257,24 +246,12 @@ Razor sharp scales.'
           Other
         </LABEL>
         <TEXTAREA
-            readonly=''
             id='ExampleForm.other'
             tabIndex='0'
             class='zc-widget'
             value="I've got a magic toenail"
             ></TEXTAREA>
       </DIV>
-    </DIV>
-    <DIV
-       class='dijitSplitter dijitSplitterV'
-       dojoattachevent='onkeypress:_onKeyPress,onmousedown:_startDrag,onmouseenter:_onMouse,onmouseleave:_onMouse'
-       tabindex='0'
-       wairole='separator'
-       role='separator'
-       id='zc.dojo.zc-left-fields.ExampleForm_splitter'
-       widgetId='zc.dojo.zc-left-fields.ExampleForm_splitter'
-       >
-      <DIV class='dijitSplitterThumb' />
     </DIV>
   </DIV>
 </FORM>
