--- a/src/zc/dojoform/test-examples/blank.html
+++ b/src/zc/dojoform/test-examples/blank.html
@@ -1,7 +1,6 @@
 <!doctype html>
-<html>
+<html style="height: 100%; width: 100%">
 <head>
-
 
   <link
      rel="stylesheet" type="text/css"
@@ -36,6 +35,6 @@
 
           ></script>
 </head>
-<body class="tundra">
+<body class="tundra" style="height: 100%; width: 100%;">
 </body>
 </html>
