Updated to reflect that firefox handles checkboxes a tad differently than chrome.

--- a/src/zc/dojoform/test-examples/2.html
+++ b/src/zc/dojoform/test-examples/2.html
@@ -7,7 +7,7 @@
       <DIV
          class='zc-field zope-schema-TextLine required'
          id='zc-field-ExampleForm.first_name'
-         title='Given name.'
+         title='Given name'
          >
         <LABEL for='ExampleForm.first_name' class='zc-label'>
           First name
