--- a/src/zc/dojoform/test-examples/3.html
+++ b/src/zc/dojoform/test-examples/3.html
@@ -52,7 +52,7 @@
           <INPUT
              name='happy'
              type='checkbox'
-             checked=''
+             checked='/.*/'
              id='ExampleForm.happy'
              tabIndex='3'
              />
