--- a/src/zc/dojoform/test-examples/6.html
+++ b/src/zc/dojoform/test-examples/6.html
@@ -39,7 +39,7 @@
         <DIV class='dijit zc-widget'>
           <INPUT
               type='checkbox'
-              checked=''
+              checked='/.*/'
               id='ExampleForm.happy'
               tabIndex='0'
               />
