--- a/src/zc/dojoform/test-examples/7.html
+++ b/src/zc/dojoform/test-examples/7.html
@@ -34,7 +34,7 @@
         <DIV class='dijit zc-widget'>
           <INPUT
               type='checkbox'
-              checked=''
+              checked='/.*/'
               id='ExampleForm.happy'
               tabIndex='0'
               />
