- progress!  - recordlist widget is working and under test

--- a/src/zc/dojoform/test-examples/blank.html
+++ b/src/zc/dojoform/test-examples/blank.html
@@ -28,6 +28,7 @@
           src="../dojo/dojo/dojo.js"
           djConfig="modulePaths: {
                     'zc.dojo': '/dojoform/resources/zc.dojo',
+                    'zc.RecordList': '/dojoform/resources/recordlist',
                     'zc.RangeWidget': '/dojoform/resources/rangewidget',
                     'zc.ckeditor': '/dojoform/ckeditor/resources/widget'
                     }
