- fixes for backward compat

--- a/src/zc/dojoform/test-examples/6.html
+++ b/src/zc/dojoform/test-examples/6.html
@@ -162,6 +162,15 @@ Razor sharp scales.'
           <SPAN class='dijit dijitButton' xxx>
                 <SPAN id='addresses.dojo.delete.btn_label'>Delete</SPAN>
           </SPAN>
+          <INPUT type="hidden" value='{"addresses.street.0":"123 fake street","addresses.city.0":"fakeville","addresses.awesomeness.0":"9","addresses.street.1":"345 false street","addresses.city.1":"falsetown","addresses.awesomeness.1":"9001"}' />
+       <DIV>
+         <INPUT type="hidden" name="addresses.street.0" value="123 fake street" />
+         <INPUT type="hidden" name="addresses.city.0" value="fakeville" />
+         <INPUT type="hidden" name="addresses.awesomeness.0" value="9" />
+         <INPUT type="hidden" name="addresses.street.1" value="345 false street" />
+         <INPUT type="hidden" name="addresses.city.1" value="falsetown" />
+         <INPUT type="hidden" name="addresses.awesomeness.1" value="9001" />
+       </DIV>
         </DIV>
       </DIV>
     </DIV>
