--- a/src/zc/dojoform/test-examples/1_legacy.html
+++ b/src/zc/dojoform/test-examples/1_legacy.html
@@ -425,6 +425,15 @@ Razor sharp scales.">
          </span>
          <input type="button" value=""  />
         </span>
+        <input type="hidden" value='{"addresses.street.0":"123 fake street","addresses.city.0":"fakeville","addresses.awesomeness.0":"9","addresses.street.1":"345 false street","addresses.city.1":"falsetown","addresses.awesomeness.1":"9001"}' />
+       <div>
+         <input type="hidden" name="addresses.street.0" value="123 fake street" />
+         <input type="hidden" name="addresses.city.0" value="fakeville" />
+         <input type="hidden" name="addresses.awesomeness.0" value="9" />
+         <input type="hidden" name="addresses.street.1" value="345 false street" />
+         <input type="hidden" name="addresses.city.1" value="falsetown" />
+         <input type="hidden" name="addresses.awesomeness.1" value="9001" />
+       </div>
        </div>
       </div>
      </div>
