- fix tests (add ckeditor to parts)  - various tweaks  - TODO:    - 1.6 compat    - move ckeditor to ajaxform

--- a/src/zc/dojoform/test-examples/blank.html
+++ b/src/zc/dojoform/test-examples/blank.html
@@ -21,7 +21,7 @@
      >
 
   <script type="text/javascript"
-          src="/dojoform/ckeditor/resources/ckeditor/ckeditor.js"
+          src="../ckeditor/ckeditor.js"
           ></script>
 
   <script type="text/javascript"
