--- a/src/zc/dojoform/test-examples/blank.html
+++ b/src/zc/dojoform/test-examples/blank.html
@@ -10,9 +10,20 @@
      rel="stylesheet" type="text/css"
      href="../dojo/dijit/themes/tundra/tundra.css"
      >
+
   <link
      rel="stylesheet" type="text/css"
-     href="../dojo/dojox/grid/resources/tundraGrid.css"
+     href="../dojo/dojox/grid/enhanced/resources/EnhancedGrid.css"
+     >
+
+  <link
+     rel="stylesheet" type="text/css"
+     href="../dojo/dojox/grid/enhanced/resources/tundra/EnhancedGrid.css"
+     >
+
+  <link
+     rel="stylesheet" type="text/css"
+     href="../dojo/dojox/grid/enhanced/resources/EnhancedGrid_rtl.css"
      >
 
   <link
