- hand merge old rangewidget fixes  - fix tests

--- a/src/zc/dojoform/test-examples/1_legacy.html
+++ b/src/zc/dojoform/test-examples/1_legacy.html
@@ -207,7 +207,7 @@
                <tbody>
                 <tr>
                  <td>
-                   
+                  &nbsp; 
                  </td>
                 </tr>
                </tbody>
@@ -218,7 +218,7 @@
                <tbody>
                 <tr>
                  <td>
-                   
+                  &nbsp; 
                  </td>
                 </tr>
                </tbody>
