--- a/src/zc/dojoform/test-examples/1_legacy.html
+++ b/src/zc/dojoform/test-examples/1_legacy.html
@@ -206,8 +206,7 @@
               <table cellspacing="0" cellpadding="0" border="0" role="presentation">
                <tbody>
                 <tr>
-                 <td>
-                  &nbsp; 
+                 <td class="dojoxGridRowbarInner">
                  </td>
                 </tr>
                </tbody>
@@ -217,8 +216,7 @@
               <table cellspacing="0" cellpadding="0" border="0" role="presentation">
                <tbody>
                 <tr>
-                 <td>
-                  &nbsp; 
+                 <td class="dojoxGridRowbarInner">
                  </td>
                 </tr>
                </tbody>
