conversion to AMD

--- a/src/zc/dojoform/test-examples/1.html
+++ b/src/zc/dojoform/test-examples/1.html
@@ -1,6 +1,6 @@
 <FORM
-    dojoattachpoint='containerNode'
-    dojoattachevent='onreset:_onReset,onsubmit:_onSubmit'
+    data-dojo-attach-point='containerNode'
+    data-dojo-attach-event='onreset:_onReset,onsubmit:_onSubmit'
     id='ExampleForm'
     widgetId='ExampleForm'
     class='zc-form'
