eliminate usage of globals, clean up

--- a/src/zc/dojoform/test-examples/blank.html
+++ b/src/zc/dojoform/test-examples/blank.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html style="height: 100%; width: 100%">
+<html>
 <head>
   <title></title>
   <link
@@ -36,6 +36,7 @@
               "zc.dojo": "/dojoform/resources/zc.dojo",
               "zc.ckeditor": "/dojoform/resources/ckwidget"
           },
+	  deps: ["zc/dojo", "zc/ckeditor"],
           isDebug: true   
       };
   </script>
